<resources>
    <string name="app_name">UserCenter</string>
    <string name="login_sendverfycode">获取验证码</string>
    <string name="login_name_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入您的密码</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_bnt">登录</string>
    <string name="login_quickLogin_bnt">一键登录</string>
    <string name="login_passwordLogin_bnt">账号登录</string>
    <string name="login_veriLogin_bnt">验证码登录</string>
    <string name="login_wxLogin_bnt">微信登录</string>
    <string name="login_bottom_tip">登录即表示同意</string>
    <string name="login_bottom_tip2">《隐私政策协议》</string>
    <string name="login_bottom_tip3">和</string>
    <string name="login_bottom_tip4">《服务协议》</string>
    <string name="login_regist_btn">立即注册</string>
    <string name="login_fogetPwd_btn">忘记密码</string>
</resources>
